fix day and details

--- a/_posts/weeks/2018-02-13-day7.md
+++ b/_posts/weeks/2018-02-13-day7.md
@@ -1,5 +1,5 @@
 ---
-title: Day 6-7
+title: Day 7
 layout: course_page
 categories:
  - content
@@ -10,8 +10,9 @@ categories:
 
 ### Reading:
 
-[Copying to cluster](https://support.ceci-hpc.be/doc/_contents/ManagingFiles/TransferringFilesEffectively.html)  
+[Copying to cluster](https://support.ceci-hpc.be/doc/_contents/ManagingFiles/TransferringFilesEffectively.html)
+
+[URI cluster info](https://web.uri.edu/hpc-research-computing/using-seawulf/)  
 [Using pre-installed software](https://support.ceci-hpc.be/doc/_contents/UsingSoftwareAndLibraries/UsingPreInstalledSoftware/index.html)  
 [Slurm tutorial](https://support.ceci-hpc.be/doc/_contents/QuickStart/SubmittingJobs/SlurmTutorial.html)  
 [Slurm basics](http://www.brightcomputing.com/blog/bid/174099/slurm-101-basic-slurm-usage-for-linux-clusters)  
-[URI slurm info](https://web.uri.edu/hpc-research-computing/using-seawulf/)
