update for day 9

--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -12,19 +12,20 @@ categories:
 |  | Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 (Sakai)| |
 | 2   | Automating repetitive tasks  | More command line | Buffalo Ch. 7 (Sakai) |  |
 | 3   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 cont. | Commenting a shell script |
+| 3   | Automating repetitive tasks  | Finding things | Buffalo Ch. 7 cont. |  |
 | 4   | High performance computing  | Intro to the cluster |  ||
 |     | Sharing and research transparancy | Git| Buffalo Ch. 5 (Sakai)|        |
 | 5   | Collaboration | Git cont.| Buffalo Ch. 5 cont. | Share your git repo       |
-| TBD   | Big data and answerable questions | Discussion of your research | Buffalo Ch. 1||
-|    | Coding for data analysis| Intro to R and RStudio| Buffalo Ch. 8 ||
+|    | Big data and answerable questions | Discussion of your research | Buffalo Ch. 1||
+| 6   | Coding for data analysis| Intro to R and RStudio| Buffalo Ch. 8 ||
 |    | Data organization and management|R: functions|Buffalo Ch. 2, Kitzes P1||
-||Data visualization for exploration| R: ggplot2| Wickham ch.2,3,28 | |
+| |Data visualization for exploration| R: ggplot2| Wickham ch.2,3,28 | |
 |     | Good data practice | R Markdown| Wickham ch. 27,29,30 |Exploratory analysis|
-|| Analyzing data by category|R: plyr/dplyr | Wickham ch. 5 | |
+| | Analyzing data by category|R: plyr/dplyr | Wickham ch. 5 | |
 |  | Tidy Data and Relational data|R: dplyr,tidyr| Wickham ch. 12,13
 |    | Testing and Scripting|R - shell  | Buffalo ch. 8 |     |
 |    | Post break recap
-||Appropriate analyses and statistics      ||Foster et al.  |
+| |Appropriate analyses and statistics      ||Foster et al.  |
 |     | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  |                              |
 ||Pattern counting |Python: basics|Vanderplas ch. 1|Pattern counting|
 |    | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
