--- a/_posts/weeks/2018-02-15-day8.md
+++ b/_posts/weeks/2018-02-15-day8.md
@@ -1,5 +1,5 @@
 ---
-title: Day 8
+title: Day 8-9
 layout: course_page
 categories:
  - content
@@ -11,3 +11,7 @@ categories:
 ### Reading:
 
 Buffalo chapter 5 (on Sakai)  
+
+### Assignment:
+
+Collaboration with git (on Sakai)
