--- a/_posts/weeks/2018-02-13-day7.md
+++ b/_posts/weeks/2018-02-13-day7.md
@@ -7,6 +7,7 @@ categories:
 
 ### In class material: 
 [Cluster instructions](../cluster_instructions)
+[HPC Carpentry Tutorial](https://hpc-carpentry.github.io/hpc-intro)
 
 ### Reading:
 
