--- a/_posts/weeks/2018-02-27-day11.md
+++ b/_posts/weeks/2018-02-27-day11.md
@@ -10,6 +10,6 @@ categories:
 
 ### Reading:
 
-Buffalo ch. 8 (on Sakai)
+Buffalo ch. 8 (on Sakai) - please note that we are using some functions that are newer and simpler than those recommended in the text.
 
 ### Assignment:
