add git resources

--- a/_posts/weeks/2018-02-15-day8.md
+++ b/_posts/weeks/2018-02-15-day8.md
@@ -11,6 +11,8 @@ categories:
 ### Reading:
 
 Buffalo chapter 5 (on Sakai)  
+[Blog post on git](https://suzan.rbind.io/2018/03/reflections-4-months-of-github/)  
+[More advanced git](https://github.com/GitInPractice/GitInPractice) (optional)  
 
 ### Assignment:
 
