--- a/_posts/weeks/2018-03-01-day12.md
+++ b/_posts/weeks/2018-03-01-day12.md
@@ -1,5 +1,5 @@
 ---
-title: Day 11
+title: Day 12
 layout: course_page
 categories:
  - content
@@ -10,6 +10,6 @@ categories:
 
 ### Reading:
 
-Buffalo ch. 8 (on Sakai) - please note that we are using some functions that are newer and simpler than those recommended in the text.
+[Grolemund and Wickham ch. 5](http://r4ds.had.co.nz/transform.html)
 
-### Assignment:
+Buffalo ch. 8 (on Sakai) - please note that we are using some functions that are newer and simpler than those recommended in the text.
