update tidy data

--- a/_posts/weeks/2018-03-06-day13.md
+++ b/_posts/weeks/2018-03-06-day13.md
@@ -7,8 +7,16 @@ categories:
 
 ### In class material: 
 [Tidy Data](http://www.datacarpentry.org/spreadsheet-ecology-lesson/)  
-- Note: we will refer to "melt" as "gather" (i.e. to convert wide multi-observation data to long single-observation data); we will refer to "cast" as "spread" (i.e. long to wide)
 
 Reading:
 
-[Hadley Wickham, Tidy Data, Vol. 59, Issue 10, Sep 2014, Journal of Statistical Software.](http://www.jstatsoft.org/v59/i10)
+[R For Data Science ch. 12](http://r4ds.had.co.nz/tidy-data.html)
+
+[Wickham, H. 2014. Tidy Data. Journal of Statistical Software. 59(10)](http://www.jstatsoft.org/v59/i10)  
+- Note: we will refer to "melt" as "gather" (i.e. to convert wide multi-observation data to long single-observation data); we will refer to "cast" as "spread" (i.e. long to wide)
+
+[White, E. et al. 2013. Nine simple ways to make it easier to (re)use your data. Ideas in Ecology and Evolution 6(2): 1–10](https://ojs.library.queensu.ca/index.php/IEE/article/view/4608)
+
+### Notes:
+
+[Day 14 notes on tidy data](../day14notes)
