update tidy data

--- a/_posts/weeks/2018-03-08-day14notes.md
+++ b/_posts/weeks/2018-03-08-day14notes.md
@@ -1,3 +1,8 @@
+---
+title: Day 14 Notes
+layout: course_page
+---
+
 Everything gets its own column
 Notes should not be included in a data column 
 Notes should not be associated with formatting
