fix day 12 and 13

--- a/_posts/weeks/2018-03-01-day12.md
+++ b/_posts/weeks/2018-03-01-day12.md
@@ -10,6 +10,10 @@ categories:
 
 ### Reading:
 
-[Grolemund and Wickham ch. 5](http://r4ds.had.co.nz/transform.html)
+[Grolemund and Wickham ch. 5: Data transformation](http://r4ds.had.co.nz/transform.html)
+
+[Grolemund and Wickham ch. 16: Dates and times](http://r4ds.had.co.nz/dates-and-times.html)
+
+[Grolemund and Wickham ch. 18: Pipes](http://r4ds.had.co.nz/pipes.html)
 
 Buffalo ch. 8 (on Sakai) - please note that we are using some functions that are newer and simpler than those recommended in the text.
