--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -20,16 +20,14 @@ categories:
 |   | Data frames|R: dplyr | Grolemund ch. 5, 16, 18 | |
 | 7 | Tidy Data | R: dplyr| Grolemund ch. 12| |
 |   | Data visualization| R: ggplot2| Grolemund ch. 2,3,28 | |
-| 8 | Relational data|R: dbplyr| Grolemund ch. 13 | |
-|   | Data organization and management|R: functions|Grolemund||
-| 9 | Good data practice | R Markdown| Grolemund ch. 27 |Exploratory analysis|
-|   | Testing and Scripting|R - shell  | Buffalo ch. 8 |     |
-|  ?|Appropriate analyses and statistics      ||Foster et al.  |
-|   | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  |                              |
+|   | SPRING BREAK | | | |
+| 8 | Good data practice | R Markdown| Grolemund ch. 27 |Exploratory analysis|
+|   | Relational data|R: dbplyr| Grolemund ch. 13 | |
+| 9 | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  ||
 |  |Pattern counting |Python: basics|Vanderplas ch. 1|Pattern counting|
 |   | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
 |    | Packaging complex data| Python: pandas joins|||
 |   | Review and work on projects| || Complete data analysis    |
-|    | Making sure it's right   | Python: tests  | Buffalo: p.13              ||
-|   | Command line   |  Python: scripts and tests                |              ||
+|    | Making sure it's right   | Python: tests  | Buffalo: p.13||
+|   | Command line   |  Python: scripts and tests|              ||
 |    | Visualization   | Python: matplotlib | Vanderplas ch. 4  ||
