add helpful info

--- a/_posts/weeks/2018-03-06-day13.md
+++ b/_posts/weeks/2018-03-06-day13.md
@@ -17,6 +17,10 @@ Reading:
 
 [White, E. et al. 2013. Nine simple ways to make it easier to (re)use your data. Ideas in Ecology and Evolution 6(2): 1–10](https://ojs.library.queensu.ca/index.php/IEE/article/view/4608)
 
+[Broman, K.W. and K.H. Woo. 2017/ Data organization in spreadsheets. The American Statistician](https://www.tandfonline.com/doi/full/10.1080/00031305.2017.1375989)
+
+[Data Organization](http://kbroman.org/dataorg/)
+
 ### Notes:
 
 [Day 14 notes on tidy data](../day14notes)
