--- a/_posts/weeks/2018-03-08-day14.md
+++ b/_posts/weeks/2018-03-08-day14.md
@@ -10,6 +10,7 @@ categories:
 
 Reading:
 
-[R For Data Science ch. 3](http://r4ds.had.co.nz/data-visualisation.html)  
+[R For Data Science ch. 3](http://r4ds.had.co.nz/data-visualisation.html)
+[R For Data Science ch. 7](http://r4ds.had.co.nz/exploratory-data-analysis.html)  
 [R For Data Science ch. 28.7](http://r4ds.had.co.nz/graphics-for-communication.html#saving-your-plots)  
 [Optional: data visualization](http://serialmentor.com/dataviz)
