--- a/_posts/weeks/2018-03-20-day15.md
+++ b/_posts/weeks/2018-03-20-day15.md
@@ -8,6 +8,14 @@ categories:
 ### In class material: 
 [R markdown introduction](/BigDataAnalysis18/2018-03-20-day15Rmarkdown.html)
 
-Reading:
+### Reading:
 
-[R For Data Science ch. 27](http://r4ds.had.co.nz/r-markdown.html)
+[R For Data Science ch. 27](http://r4ds.had.co.nz/r-markdown.html)  
+[Knitr in a knutshell](http://kbroman.org/knitr_knutshell/)
+
+### Advice for the assignment
+
+[Exploratory data analysis](http://r4ds.had.co.nz/exploratory-data-analysis.html)  
+[Relationships among data](http://moderndive.com/6-regression.html)
+- 439 students should focus Exploratory Data Analysis 6.1.1 and 6.2.1
+- 539 students can find information on statistics in subsequent sections
