update for day 18 - nbviewer

--- a/_posts/weeks/2018-03-29-day18.md
+++ b/_posts/weeks/2018-03-29-day18.md
@@ -7,6 +7,6 @@ categories:
 
 ### In class material: 
 [Slicing data in python](http://www.datacarpentry.org/python-ecology-lesson/02-index-slice-subset/)  
-[Logistic growth in python](../2018-03-29-day18-logisticgrowth.ipynb)
+[Logistic growth in python](https://nbviewer.jupyter.org/urls/rachelss.github.io/BigDataAnalysis18/2018-03-29-day18-logisticgrowth.ipynb)
 
 Reading:
