update for day 18

--- a/_posts/weeks/2018-03-27-day17.md
+++ b/_posts/weeks/2018-03-27-day17.md
@@ -9,3 +9,4 @@ categories:
 [Starting with data in python](http://www.datacarpentry.org/python-ecology-lesson/01-starting-with-data/)  
 
 Reading:
+[Vanderplas p.5-7, 66-68, and 86-87](http://www.oreilly.com/programming/free/files/a-whirlwind-tour-of-python.pdf)
