--- a/_posts/weeks/2018-03-29-day18.md
+++ b/_posts/weeks/2018-03-29-day18.md
@@ -10,3 +10,4 @@ categories:
 [Logistic growth in python](https://nbviewer.jupyter.org/urls/rachelss.github.io/BigDataAnalysis18/2018-03-29-day18-logisticgrowth.ipynb)
 
 Reading:
+[Vanderplas p.8-43](http://www.oreilly.com/programming/free/files/a-whirlwind-tour-of-python.pdf)
