--- a/logisticgrowth.ipynb
+++ b/logisticgrowth.ipynb
@@ -133,6 +133,7 @@
    },
    "outputs": [],
    "source": [
+    "from random import random\n",
     "def plot_pop_catastrophe_rK(n0,r,K):\n",
     "    \n",
     "    populationsize = []  #an empty list\n",
