update schedule python

--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -11,7 +11,7 @@ categories:
 |   | Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 (Sakai)| |
 | 2 | Automating repetitive tasks  | More command line | Buffalo Ch. 7 (Sakai) |   |
 | 3 | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 cont. | Commenting a shell script |
-| 3 | Automating repetitive tasks  | Finding things | Buffalo Ch. 7 cont. |  |
+|   | Automating repetitive tasks  | Finding things | Buffalo Ch. 7 cont. |  |
 | 4 | High performance computing  | Intro to the cluster |  ||
 |   | Sharing and research transparancy | Git| Buffalo Ch. 5 (Sakai)|        |
 | 5 | Collaboration | Git cont.| Buffalo Ch. 5 cont. | Share your git repo  |
@@ -23,11 +23,11 @@ categories:
 |   | SPRING BREAK | | | |
 | 8 | Good data practice | R Markdown| Grolemund ch. 27 |Exploratory analysis|
 |   | Relational data|R: dbplyr| Grolemund ch. 13 | |
-| 9 | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  ||
-|  |Pattern counting |Python: basics|Vanderplas ch. 1|Pattern counting|
-|   | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
-|    | Packaging complex data| Python: pandas joins|||
+| 9 | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
+| 10| Automating repetitive tasks| Python: intro with logistic growth| Vanderplas: whirlwind  ||
+| 11|Pattern counting |Python: basics|Vanderplas ch. 1|Pattern counting|
+|   | Visualization   | Python: matplotlib | Vanderplas ch. 4  ||
+| 12 | Command line   |  Python: scripts and tests|              ||
+|    | Making sure it's right   | Python: tests  |  ||
+| 13 | Objects   |  Python: classes|              ||
 |   | Review and work on projects| || Complete data analysis    |
-|    | Making sure it's right   | Python: tests  | Buffalo: p.13||
-|   | Command line   |  Python: scripts and tests|              ||
-|    | Visualization   | Python: matplotlib | Vanderplas ch. 4  ||
