--- a/_posts/weeks/2018-03-27-day17.md
+++ b/_posts/weeks/2018-03-27-day17.md
@@ -10,3 +10,7 @@ categories:
 
 Reading:
 [Vanderplas p.5-7, 66-68, and 86-87](http://www.oreilly.com/programming/free/files/a-whirlwind-tour-of-python.pdf)
+[Vanderplan: pandas - ch. 3](https://jakevdp.github.io/PythonDataScienceHandbook/)
+
+Help:
+[Visualize code](http://www.pythontutor.com/)
