--- a/_posts/weeks/2018-04-17-day23.md
+++ b/_posts/weeks/2018-04-17-day23.md
@@ -7,6 +7,7 @@ categories:
 
 ### In class material: 
 
-[Testing](http://katyhuff.github.io/python-testing/)
+[Testing](http://katyhuff.github.io/python-testing/)  
+[Test class script](../test_count_kmers2.py)
 
 Reading:
