--- a/_posts/weeks/2018-04-12-day22.md
+++ b/_posts/weeks/2018-04-12-day22.md
@@ -7,6 +7,7 @@ categories:
 
 ### In class material: 
 
-[Moving to the command line](http://swcarpentry.github.io/python-novice-inflammation/10-cmdline/)
+[Moving to the command line](http://swcarpentry.github.io/python-novice-inflammation/10-cmdline/)  
+[Class script](../count_kmers.py)
 
 Reading:
