add notebook w Seq object

--- a/_posts/weeks/2018-04-19-day24.md
+++ b/_posts/weeks/2018-04-19-day24.md
@@ -6,8 +6,9 @@ categories:
 ---
 
 ### In class material: 
+[In class](https://nbviewer.jupyter.org/urls/rachelss.github.io/BigDataAnalysis18/objects.ipynb)
 
-[Classes](http://openbookproject.net/thinkcs/python/english3e/classes_and_objects_I.html)  
-[Classes](https://jeffknupp.com/blog/2014/06/18/improve-your-python-python-classes-and-object-oriented-programming/)
 
 Reading:
+[Classes](http://openbookproject.net/thinkcs/python/english3e/classes_and_objects_I.html)  
+[Classes](https://jeffknupp.com/blog/2014/06/18/improve-your-python-python-classes-and-object-oriented-programming/)
