fix script name

--- a/_posts/weeks/2018-04-12-day22.md
+++ b/_posts/weeks/2018-04-12-day22.md
@@ -8,6 +8,6 @@ categories:
 ### In class material: 
 
 [Moving to the command line](http://swcarpentry.github.io/python-novice-inflammation/10-cmdline/)  
-[Class script](../count_kmers.py)
+[Class script](../count_kmers2.py)
 
 Reading:
